--- a/source/Web/Web.config
+++ b/source/Web/Web.config
@@ -21,7 +21,7 @@
     <compilation defaultLanguage="c#" debug="true"/>
     <customErrors defaultRedirect="Error.aspx" mode="Off"/>
     <globalization requestEncoding="ascii" responseEncoding="ascii"/>
-    <pages buffer="true" enableSessionState="ReadOnly" enableViewState="false" enableViewStateMac="false" smartNavigation="false"/>
+    <pages buffer="true" enableSessionState="ReadOnly" enableViewState="false" smartNavigation="false"/>
     <sessionState mode="InProc" timeout="10"/>
   </system.web>
   <location path="EditAccount.aspx">
